testsuite/tests/interpreter_errors/combine_to_invalid_type/test.out
script.lkql:2:7: error: Unsupported operation: Str & Int
  2 | print("a".combine(2))
    |       ^^^^^^^^^^^^^^
script.lkql:2:7 in script.lkql
  2 | print("a".combine(2))
    |       ^^^^^^^^^^^^^^
